# crawlab-api

./: .env.example  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
scripts/: diag_collection_switch.py  dump_schedule_tasks.py  dump_spider_tasks.py  example_data_collections.py  fetch_new_results.py  smoke_test.py
src/crawlab_api/: __init__.py  client.py  conditions.py  exceptions.py  models.py
