[project]
name = "crawlab-api"
version = "0.6.3.2"
description = "Python client for the self-hosted Crawlab API (spiders, tasks, results, export, projects, nodes, stats…)."
readme = "README.md"
authors = [
    { name = "ve3000", email = "ve@gvirila.info" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
